--- a/.github/workflows/full-fork-sync.yml
+++ b/.github/workflows/full-fork-sync.yml
@@ -20,6 +20,9 @@ jobs:
           # scopes
           token: ${{ secrets.WORKFLOW_TOKEN }}
       -
+        name: Set git identity
+        run: git config --global user.email "" && git config --global user.name "Full-Fork-Sync"
+      -
         name: Add fork upstream
         run: git remote add upstream https://github.com/ycm-core/YouCompleteMe.git
       -
